# habits-display

./: Cargo.toml  flake.nix  readme.md
.github/workflows/: rust_ci.yml
case/: case.scad  case.stl  lid.scad  lid.stl  mixin.scad
doc/: references.md  wiring.md
src/: display.rs  lib.rs  ntp.rs  time.rs  websocket.rs  wifi.rs
src/assets/: cat.rgb565
