[package]
edition      = "2024"
name         = "habits-display"
rust-version = "1.96"
version      = "0.4.1"

[[bin]]
name = "habits-display"
path = "./src/bin/main.rs"
test = false

[[test]]
harness = false
name    = "hello_test"

[lib]
test = false

[dependencies]
esp-hal = { version = "~1.1.0", features = ["defmt", "esp32c3", "unstable"] }

jiff = { version = "0.2", default-features = false, features = ["static"] }

esp-rtos = { version = "0.3.0", features = [
  "defmt",
  "embassy",
  "esp-alloc",
  "esp-radio",
  "esp32c3",
] }

defmt                  = "1.0.1"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["defmt", "esp32c3"] }

embassy-net = { version = "0.9.1", features = [
  "defmt",
  "dhcpv4",
  "medium-ethernet",
  "tcp",
  "udp",
  "dns"
] }
embedded-io-async = { version = "0.7.0", features = ["defmt"] }
esp-alloc = { version = "0.10.0", features = ["defmt"] }
panic-rtt-target = { version = "0.2.0", features = ["defmt"] }
rtt-target = { version = "0.6.2", features = ["defmt"] }
# for more networking protocol support see https://crates.io/crates/edge-net
embassy-executor = { version = "0.10.0", features = ["defmt"] }
embassy-time = { version = "0.5.0", features = ["defmt"] }
esp-radio = { version = "0.18.0", features = [
  "defmt",
  "esp-alloc",
  "esp32c3",
  "unstable",
  "wifi",
] }

static_cell = {version = "2.1.1", features = ["nightly"]}

sntpc = { version = "0.9", default-features = false }
sntpc-net-embassy = { version = "0.9", default-features = false }

edge-ws = { version = "0.7", default-features = false, features = ["io", "defmt"] }
embedded-tls = { version = "0.19", default-features = false, features = ["defmt"] }
rand_core = { version = "0.6", default-features = false }

embedded-graphics = "0.8"
embedded-hal-bus = "0.3"
mipidsi = "0.10"
embassy-sync = { version = "0.8.0", features = ["defmt"] }
heapless = { version = "0.9", default-features = false }

[patch.crates-io]
# NOTE: https://github.com/GnomedDev/proc-macro-error-2/pull/14
proc-macro-error2 = { git = "https://github.com/fgardt/proc-macro-error-2", branch = "fix/future-incompat" }

[dev-dependencies]
embedded-test = { version = "0.7.1", features = [
  "defmt",
  "embassy-010",
  "external-executor",
] }

# For fine tuning these settings, please refer to https://doc.rust-lang.org/cargo/reference/profiles.html
[profile.dev]
# The default debug profile is too slow and too big for resource-constrained devices.
# Always build with some optimizations enabled.
opt-level = "s"

[profile.release]
codegen-units = 1     # LLVM can perform better optimizations using a single thread
debug         = 2     # prefer slower builds but better debugging experience
lto           = 'fat'
opt-level     = 's'
